test/types/string/bradc/substring/substringBadRange.chpl
var str = "abcdefghijklm";

writeln("str[11..12] = ", str[11..12]);
writeln("str[11..15] = ", str[11..15]);
